Bugfix set correct conda env name for ci jobs

--- a/pandas/Dockerfile
+++ b/pandas/Dockerfile
@@ -6,7 +6,6 @@ LABEL author="Parag M."
 LABEL description="Dev image for working with pandas"
 
 ARG PLATFORM=linux-64
-ARG ENV_NAME=base
 
 ENV LANG=en_US.UTF-8
 ENV CRYPTOGRAPHY_DONT_BUILD_RUST=1
@@ -19,11 +18,11 @@ COPY conda-lock.yml conda-lock.yml
 
 RUN conda-lock render -k explicit conda-lock.yml \
     && mamba create \
-       --name ${ENV_NAME} \
+       -p /opt/conda/envs/dev \
        --file conda-${PLATFORM}.lock
 
 RUN mamba uninstall --yes conda-lock \
-    && mv conda-${PLATFORM}.lock /opt/conda/envs/${ENV_NAME}/conda-meta/conda-meta.lock \
+    && mv conda-${PLATFORM}.lock /opt/conda/envs/dev/conda-meta/conda-meta.lock \
     && /opt/conda/bin/conda clean -afy \
     && find /opt/conda/ -follow -type f -name '*.a' -delete \
     && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
@@ -32,14 +31,14 @@ RUN mamba uninstall --yes conda-lock \
 	  && find /opt/conda/ -name '__pycache__' -exec rm -fr {} + \
     && find /opt/conda/ -type d -name 'tests' -exec rm -fr {} + \
     && find /opt/conda/ -follow -type f -name '*.js.map' -delete \
-    && cd /opt/conda/envs/${ENV_NAME} \
+    && cd /opt/conda/envs/dev \
     && rm -rf bin/x86_64-conda-linux-gnu-ld \
        bin/sqlite3 \
        bin/openssl \
        share/terminfo \
        lib/libpython3.9.so.1.0
 
-RUN echo ". /opt/conda/etc/profile.d/conda.sh && conda activate ${ENV_NAME}" > ~/.bashrc
+RUN echo ". /opt/conda/etc/profile.d/conda.sh && conda activate dev" > ~/.bashrc
 
 
 # -----------------------
@@ -49,10 +48,9 @@ FROM mambaorg/micromamba:0.22.0 as dist
 LABEL author="Parag M."
 LABEL description="Minimal image for running pandas-based packages"
 
-ARG ENV_NAME=base
 ARG MAMBA_USER=mambauser
 
-COPY --from=build --chown=$MAMBA_USER:$MAMBA_USER /opt/conda/envs/${ENV_NAME} /opt/conda
+COPY --from=build --chown=$MAMBA_USER:$MAMBA_USER /opt/conda/envs/dev /opt/conda
 
 WORKDIR /usr/local/src
 ENTRYPOINT ["/usr/local/bin/_entrypoint.sh"]
