--- a/.github/workflows/pandas.yml
+++ b/.github/workflows/pandas.yml
@@ -17,20 +17,25 @@ jobs:
       - run: npm install -g dockerlint
       - run: cd pandas && dockerlint
 
-  build:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd pandas && make dist
-
   publish:
     runs-on: ubuntu-latest
-    needs: build
+    needs: lint
     steps:
       - uses: actions/checkout@v2
       - uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PAT }}
-      - run: cd pandas && make publish
+      - name: Get changed files
+        id: changed-pandas-files
+        uses: tj-actions/changed-files@v2.0.0
+        with:
+          files: |
+            ./pandas
+      - name: Publish pandas image if changed
+        if: steps.changed-pandas-files.outputs.only_changed == 'true'
+        run: |
+          cd pandas
+          make dist
+          make jupyter
+          make publish
