--- a/.github/workflows/pandas.yml
+++ b/.github/workflows/pandas.yml
@@ -38,4 +38,5 @@ jobs:
           cd pandas
           make dist
           make jupyter
-          make publish
+          make publish-versions
+          make publish-latest
