--- a/pandas/Makefile
+++ b/pandas/Makefile
@@ -37,7 +37,7 @@ publish-versions:
 	@docker image push ${IMG_REPO}:${VERSION}-jupyter
 
 publish-latest:
-	@echo "Publishing pandas latest tag..."
+	@echo "Publishing pandas image latest tag..."
 	@docker image tag ${IMG_REPO}:latest ${IMG_REPO}:${VERSION}
 	@docker image push ${IMG_REPO}:latest
 	@docker image tag ${IMG_REPO}:latest-jupyter ${IMG_REPO}:${VERSION}-jupyter
